[gd_scene load_steps=9 format=2]

[ext_resource path="res://Door.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SoundEffects/PhysicalSounds/Hit3.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/asset package custom/kenney rpg audio/doorClose_4.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/asset package custom/kenneyretrourban/Models/GLTF format/doors.material" type="Material" id=4]
[ext_resource path="res://Entities/InteractableObjects/KinematicBody.gd" type="Script" id=5]
[ext_resource path="res://Sounds/SoundEffects/PhysicalSounds/Hit1.mp3" type="AudioStream" id=6]

[sub_resource type="CubeMesh" id=1]
material = ExtResource( 4 )
size = Vector3( 2, 2.8, 0.2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.4, 0.1 )

[node name="Door" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.75422, 1.62707, 0 )
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="." groups=["Destructible", "Interactable", "Obstacle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.981922, 0, 0 )
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 2 )

[node name="OpenSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[node name="BreakSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 5.0
max_db = 6.0
pitch_scale = 0.72

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Broken" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 39.647
unit_size = 5.0
max_db = 6.0
pitch_scale = 0.75

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="die_space" from="KinematicBody" to="." method="_on_KinematicBody_die_space"]
[connection signal="hurt_space" from="KinematicBody" to="." method="_on_KinematicBody_hurt_space"]
[connection signal="open_space" from="KinematicBody" to="." method="_on_KinematicBody_open_space"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
